--- a/.gitignore
+++ b/.gitignore
@@ -24,13 +24,6 @@
 *.handout.pdf
 *.handout.lyx
 *.synctex.gz
-
-# git-lfs files cannot be included in a template repository
-output/analysis/plots/gdp_educ.png
-output/analysis/plots/educ_gdp.png
-output/paper/TemplateLyx.pdf
-output/paper/TemplateTex.pdf
-output/talk/TemplateSlides.pdf
-output/talk/TemplateSlidesLatex.pdf
-
-*ipynb_checkpoints*
+*.ipynb*
+*.err
+*.sbatch
