--- a/source/lib/environment.yml
+++ b/source/lib/environment.yml
@@ -3,6 +3,7 @@ channels:
   - conda-forge
 dependencies:
   - python=3.11
+  - fredapi
   - ipykernel
   - matplotlib
   - numpy
@@ -13,3 +14,4 @@ dependencies:
   - pyjanitor
   - rclone
   - scons
+  - scipy
