--- a/source/paper/SConscript
+++ b/source/paper/SConscript
@@ -1,19 +1,17 @@
 Import('*')
 
-target = ['#output/paper/TemplateLyx.pdf']
-source = ['#source/paper/Template.lyx',
-          '#output/tables/top_gdp.lyx',
-	  '#output/analysis/top_gdp/top_gdp.tex', 
-          '#source/figures/gdp_educ.lyx',
-          '#source/paper/References.bib']
+figures = []
+
+source = [
+    '#source/paper/inflation_expectations.lyx',
+    '#source/paper/inflation_expectations.bib'
+] + figures
+
+target = [
+    '#output/paper/inflation_expectations.pdf'
+]
 
 env.Lyx(target, source)
 
-target = ['#output/paper/TemplateTex.pdf']
-source = ['#source/paper/Template.tex',
-          '#output/tables/top_gdp.tex', 
-	  '#output/analysis/top_gdp/top_gdp.tex', 
-          '#source/figures/gdp_educ.tex',
-          '#source/paper/References.bib']
 
-env.Latex(target, source, multibib = True)
+
