--- a/source/talk/SConscript
+++ b/source/talk/SConscript
@@ -1,13 +1,16 @@
 Import('*')
 
-target = ['#output/talk/TemplateSlides.pdf', '#temp/Template.handout.pdf']
-source = ['#source/talk/TemplateSlides.lyx',
-	  '#output/analysis/plots/gdp_educ.eps']
+figures = []
+
+source = [
+    '#source/talk/TemplateSlides.lyx'
+]
+
+target = [
+    '#output/talk/TemplateSlides.pdf',
+    '#temp/Template.handout.pdf'
+]
+
+
 
 env.Lyx(target, source)
-
-target = ['#output/talk/TemplateSlidesLatex.pdf', '#temp/TemplateLatex.handout.pdf']
-source = ['#source/talk/TemplateSlides.tex',
-	  '#output/analysis/plots/gdp_educ.eps']
-
-env.Latex(target, source)
