--- a/source/derived/mortgage_rates/SConscript
+++ b/source/derived/mortgage_rates/SConscript
@@ -3,7 +3,7 @@ Import('*')
 helpers = [
     '#source/lib/api_keys.json',
     '#source/lib/helpers/process_text.py',
-    '#source/lib/helpers/save_data.py'
+    '#source/lib/save_data.py'
 ]
 
 source = [
@@ -11,7 +11,7 @@ source = [
 ] + helpers
 
 target = [
-    '#output/derived/mortgage_rates/mortgage30us.csv'
+    '#output/derived/mortgage_rates/mortgage30us.csv',
     '#output/derived/mortgage_rates/mortgage30us.log'
 ]
 env.Python(target, source)
